--- a/index.html
+++ b/index.html
@@ -4,22 +4,48 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>project1</title>
+
+    <!-- Things for Responsive -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+      integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc="
+      crossorigin="anonymous"
+    />
+
+    <link rel="stylesheet" href="reset.css" />
   </head>
   <body>
     <header>
-      <nav>navigation</nav>
+      <div class="logo">
+        <img src="img/png/logo.png" alt="" />
+      </div>
+      <nav class="nav">
+        <ul class="nav_list">
+          <li>HOME</li>
+          <li>ABOUT</li>
+          <li>EXPERTISE</li>
+          <li>TEAMS</li>
+          <li>WORKS</li>
+          <li>PEOPLE SAY</li>
+          <li>CONTACT</li>
+        </ul>
+      </nav>
       <div class="firstPage">first page</div>
     </header>
-    <main>
+    <main class="main">
       <div class="ourStory">our story</div>
       <div class="watchOurStory">watch our story</div>
       <div class="expertise">expertise</div>
       <div class="team">Amazing team</div>
       <div>NEWS and CLIENT</div>
     </main>
-    <footer>
+    <footer class="footer">
       <div>tajam</div>
       <div>our studio</div>
       <div>stay in touch</div>
