Adding information in index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     />
 
     <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -27,28 +28,222 @@
       </div>
       <nav class="nav">
         <ul class="nav_list">
-          <li>HOME</li>
-          <li>ABOUT</li>
-          <li>EXPERTISE</li>
-          <li>TEAMS</li>
-          <li>WORKS</li>
-          <li>PEOPLE SAY</li>
-          <li>CONTACT</li>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">EXPERTISE</a></li>
+          <li><a href="#">TEAMS</a></li>
+          <li><a href="#">WORKS</a></li>
+          <li><a href="#">PEOPLE SAY</a></li>
+          <li><a href="#">CONTACT</a></li>
         </ul>
       </nav>
-      <div class="firstPage">first page</div>
+
+      <div class="firstPage">
+        <h1>We Are Awesome Creative Agency</h1>
+        <p>
+          This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
+          velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
+          nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed
+          odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
+          ipsum velit.
+        </p>
+        <button>LEARN MORE</button>
+      </div>
     </header>
     <main class="main">
-      <div class="ourStory">our story</div>
-      <div class="watchOurStory">watch our story</div>
-      <div class="expertise">expertise</div>
-      <div class="team">Amazing team</div>
-      <div>NEWS and CLIENT</div>
+      <div class="ourStory">
+        <div>
+          <img src="img/png/logo-big.png" alt="" />
+        </div>
+        <h2>OUR STORY</h2>
+        <p>
+          This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
+          velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
+          nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed
+          odio sit amet nibh vulputate cursus
+        </p>
+        <p>
+          Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a
+          ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.
+          Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+          per inceptos himenaeos./p>
+        </p>
+        <button>LEARN MORE</button>
+      </div>
+
+      <div class="watchOurStory">
+        <div>
+          <img src="img/png/play.png" alt="" />
+        </div>
+        <span>WATCH OUR STORY</span>
+      </div>
+
+      <div class="expertise">
+        <h2>EXPERTISE</h2>
+        <span>Lorem ipsum dolor sit amet proin gravida nibh vel velit</span>
+        <div>
+          <img src="img/png/screen.png" alt="" />
+          <h3>WEB DESIGN & DEVELOPMENT</h3>
+          <p>
+            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
+            velit auctor aliquet Aenean.
+          </p>
+        </div>
+        <div>
+          <img src="img/png/pen.png" alt="" />
+          <h3>BRANDING IDENTITY</h3>
+          <p>
+            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
+            velit auctor aliquet Aenean.
+          </p>
+        </div>
+        <div>
+          <img src="img/png/mobile.png" alt="" />
+          <h3>MOBILE APP</h3>
+          <p>
+            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
+            velit auctor aliquet Aenean.
+          </p>
+        </div>
+        <div>
+          <img src="img/png/graph.png" alt="" />
+          <h3>SEARCH ENGINE OPTIMIZATION</h3>
+          <p>
+            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
+            velit auctor aliquet Aenean.
+          </p>
+        </div>
+        <div>
+          <img src="img/png/gameboy.png" alt="" />
+          <h3>GAME DEVELOPMENT</h3>
+          <p>
+            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
+            velit auctor aliquet Aenean.
+          </p>
+        </div>
+        <div>
+          <img src="img/png/heart.png" alt="" />
+          <h3>MADE WITH LOVE</h3>
+          <p>
+            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
+            velit auctor aliquet Aenean.
+          </p>
+        </div>
+      </div>
+      <div class="team">
+        <h2>MEET OUR AMAZING TEAM</h2>
+        <span>Lorem ipsum dolor sit amet proin gravida nibh vel velit</span>
+        <div>
+          <div>
+            <img src="#" alt="1" />
+          </div>
+          <span>SEMF UCUK</span>
+          <p>CEO & FOUNDER</p>
+        </div>
+        <div>
+          <div>
+            <img src="#" alt="2" />
+          </div>
+          <span>DIK ADALIN</span>
+          <p>ENGINEERING</p>
+        </div>
+        <div>
+          <div>
+            <img src="#" alt="3" />
+          </div>
+          <span>JENG KOL</span>
+          <p>DESIGNER</p>
+        </div>
+        <div>
+          <div>
+            <img src="#" alt="4" />
+          </div>
+          <span>PET ROMAK</span>
+          <p>MARKETING</p>
+        </div>
+
+        <div>
+          <p>Become part of our dream team, let's join us !</p>
+          <button>WE ARE HIRING</button>
+        </div>
+      </div>
+
+      <div>
+        <div>
+          <h2>GIVE US A GOOD NEWS</h2>
+          <input type="text" value="Name" />
+          <br />
+          <input type="text" value="Email" />
+          <br />
+          <input type="text" value="Subject" />
+          <br />
+          <input type="text" value="Your Message" />
+          <br />
+          <button>SUBMIT</button>
+        </div>
+        <div>
+          <h2>OUR HAPPY CLIENT</h2>
+          <div>
+            <img src="img/png/Zara_Logo.png" alt="Zara_Logo" />
+            <img src="img/png/Logo_of_Mango_(new).png" alt="Logo_of_Mango_" />
+            <img
+              src="img/png/1280px-Barneys_New_York_Logo.png"
+              alt="1280px-Barneys_New_York_Logo"
+            />
+            <img src="img/png/1280px-Gucci_Logo.png" alt="1280px-Gucci_Logo" />
+            <img src="img/png/Calvin_klein_logo.png" alt="Calvin_klein_logo" />
+            <img src="img/png/1280px-Logo_NIKE.png" alt="1280px-Logo_NIKE" />
+            <img src="img/png/Converse_logo.png" alt="Converse_logo" />
+            <img src="img/png/Puma_Logo.png" alt="Puma_Logo" />
+            <img src="img/png/1280px-Levi's_logo.png" alt="1280px-Levi" />
+            <img src="img/png/Billabong.png" alt="Billabong" />
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="footer">
-      <div>tajam</div>
-      <div>our studio</div>
-      <div>stay in touch</div>
+      <div>
+        <div>
+          <img src="img/png/logo.png" alt="" />
+        </div>
+        <p>
+          lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis
+          sem nibh elit. Duis sed odio sit amet auctror a ornare odio non mauris
+          vitae erat in elit
+        </p>
+      </div>
+
+      <div>
+        <h3>our studio</h3>
+        <img src="img/png/big104.png" alt="location" />
+        <p>
+          Ruko cucruk, Jl. Radio luar dalem jos No.12 - 13, Kalideres - Jakarta
+          Barat 11480 - Indonesia
+        </p>
+        <img src="img/png/phone351.png" alt="phone351" />
+        <p>(+62) 21-2224 3333</p>
+      </div>
+      <div>
+        <h3>STAY IN TOUCH</h3>
+        <input type="text" value="Subscribe our newsletter" />
+        <div><img src="img/png/paper122.png" alt="paper122" /></div>
+        <div>
+          <img src="img/png/facebook.png" alt="facebook" />
+          <img src="img/png/twitter.png" alt="twitter" />
+          <img src="img/png/dribbble.png" alt="dribbble" />
+          <img src="img/png/instagram.png" alt="instagram" />
+          <img src="img/png/gplus.png" alt="gplus" />
+          <img src="img/png/youtube.png" alt="youtube" />
+        </div>
+      </div>
+      <div>
+        <ul>
+          <li>HELP</li>
+          <li>TERMS&CONDITON</li>
+          <li>PRIVACY</li>
+        </ul>
+        <div>Copyright © 2015 - Tajem Creative</div>
+      </div>
     </footer>
   </body>
 </html>
